*** empty log message ***

--- a/qos/src/org/cougaar/core/qos/frame/package.html
+++ b/qos/src/org/cougaar/core/qos/frame/package.html
@@ -210,15 +210,13 @@ their semantic interpretation.
 	  transient.  The default is "false".  <p> </dd>
 
 	<dt><b>signal-on-change</b></dt>
-	<i>[Proposed but not yet implemented]</i>This attribute
+
+	<dd> <i>[Proposed but not yet implemented]</i>This attribute
 	specifies the signal behavior when the slot is changed.  It
 	has four possible values: "none" (no signalling), "blackboard"
 	(notify the blackboard only), "bean" (use a property event to
 	notify listeners), or "all" (do all forms of signalling).  The
-	default is "all".
-	<dd>
-	  <p>
-	</dd>
+	default is "all".  <p> </dd>
 	
 
       </dl>
