Support the 'transient' slot attribute

--- a/qos/src/org/cougaar/core/qos/frame/package.html
+++ b/qos/src/org/cougaar/core/qos/frame/package.html
@@ -198,10 +198,9 @@ their semantic interpretation.
 
 	<dt><b>transient</b></dt>
 
-	<dd><i>[Proposed but not yet implemented]</i>This boolean
-	  valued attribute indicates whether or not the corresponding
-	  data member in the generated class will be declared
-	  transient.  The default is "false".  <p> </dd>
+	<dd>This boolean valued attribute indicates whether or not the
+	  corresponding data member in the generated class will be
+	  declared transient.  The default is "false".  <p> </dd>
 
 	<dt><b>type</b></dt>
 
