support 'immutable' slot attribute

--- a/qos/src/org/cougaar/core/qos/frame/package.html
+++ b/qos/src/org/cougaar/core/qos/frame/package.html
@@ -155,11 +155,10 @@ their semantic interpretation.
 
 	<dt><b>immutable</b></dt>
 
-	<dd><i>[Proposed but not yet implemented]</i> This boolean
-	  valued attribute indicates whether or not the value of the
-	  slot in any given DataFrame can be chaged after
-	  initialization.  The default is "false" (ie, values can be
-	  changed after initialization).
+	<dd> This boolean valued attribute indicates whether or not
+	  the value of the slot in any given DataFrame can be chaged
+	  after initialization.  The default is "false" (ie, values
+	  can be changed after initialization).
 	  <p>
 	</dd>
 
